fixed spacing in highlight wells

--- a/src/static/less/pages/learn-more.less
+++ b/src/static/less/pages/learn-more.less
@@ -57,7 +57,7 @@
     padding: 15px 20px;
     width: 66%;
     line-height: 1.375em;
-    margin-bottom: 10px;
+    margin: 10px 0px;
   }
   
   .filter {
